# cache_simulator

./: CMakeLists.txt  README.md  amalgamate.sh  merged.cpp
benchmarks/: Makefile  binary_tree  binary_tree.c  blocked_access  blocked_access.c  column_major  column_major.c  conflict_heavy  conflict_heavy.c  linked_list  linked_list.c  matrix_multiply  matrix_multiply.c  random_access  random_access.c  row_major  row_major.c  sequential_access  sequential_access.c  strided_access  strided_access.c  write_heavy  write_heavy.c
configs/00_Base_Configs/: BinaryTree_BaseConfig.json  BlockedDataAccess_BaseConfig.json  ColumnMajorMatrix_BaseConfig.json  ConflictHeavy_BaseConfig.json  LinkedListTraversal_BaseConfig.json  MatrixBlocked_BaseConfig.json  MatrixNaive_BaseConfig.json  RandomAccess_BaseConfig.json  RowMajorMatrix_BaseConfig.json  SequentialAccess_BaseConfig.json  StridedAccess_BaseConfig.json  WriteHeavy_BaseConfig.json
configs/01_L1_Size_Variations/: BinaryTree_L1Size_1KB.json  BinaryTree_L1Size_2KB.json  BinaryTree_L1Size_4KB.json  BinaryTree_L1Size_512B.json  BinaryTree_L1Size_8KB.json  BlockedDataAccess_L1Size_1KB.json  BlockedDataAccess_L1Size_2KB.json  BlockedDataAccess_L1Size_4KB.json  BlockedDataAccess_L1Size_512B.json  BlockedDataAccess_L1Size_8KB.json  ColumnMajorMatrix_L1Size_1KB.json  ColumnMajorMatrix_L1Size_2KB.json  ColumnMajorMatrix_L1Size_4KB.json  ColumnMajorMatrix_L1Size_512B.json  ColumnMajorMatrix_L1Size_8KB.json  ConflictHeavy_L1Size_1KB.json  ConflictHeavy_L1Size_2KB.json  ConflictHeavy_L1Size_4KB.json  ConflictHeavy_L1Size_512B.json  ConflictHeavy_L1Size_8KB.json  LinkedListTraversal_L1Size_1KB.json  LinkedListTraversal_L1Size_2KB.json  LinkedListTraversal_L1Size_4KB.json  LinkedListTraversal_L1Size_512B.json  LinkedListTraversal_L1Size_8KB.json  MatrixBlocked_L1Size_1KB.json  MatrixBlocked_L1Size_2KB.json  MatrixBlocked_L1Size_4KB.json  MatrixBlocked_L1Size_512B.json  MatrixBlocked_L1Size_8KB.json  MatrixNaive_L1Size_1KB.json  MatrixNaive_L1Size_2KB.json  MatrixNaive_L1Size_4KB.json  MatrixNaive_L1Size_512B.json  MatrixNaive_L1Size_8KB.json  RandomAccess_L1Size_1KB.json  RandomAccess_L1Size_2KB.json  RandomAccess_L1Size_4KB.json  RandomAccess_L1Size_512B.json  RandomAccess_L1Size_8KB.json  (+20 more)
configs/02_L1_BlockSize_Variations/: BinaryTree_L1Block_128B.json  BinaryTree_L1Block_16B.json  BinaryTree_L1Block_32B.json  BinaryTree_L1Block_64B.json  BlockedDataAccess_L1Block_128B.json  BlockedDataAccess_L1Block_16B.json  BlockedDataAccess_L1Block_32B.json  BlockedDataAccess_L1Block_64B.json  ColumnMajorMatrix_L1Block_128B.json  ColumnMajorMatrix_L1Block_16B.json  ColumnMajorMatrix_L1Block_32B.json  ColumnMajorMatrix_L1Block_64B.json  ConflictHeavy_L1Block_128B.json  ConflictHeavy_L1Block_16B.json  ConflictHeavy_L1Block_32B.json  ConflictHeavy_L1Block_64B.json  LinkedListTraversal_L1Block_128B.json  LinkedListTraversal_L1Block_16B.json  LinkedListTraversal_L1Block_32B.json  LinkedListTraversal_L1Block_64B.json  MatrixBlocked_L1Block_128B.json  MatrixBlocked_L1Block_16B.json  MatrixBlocked_L1Block_32B.json  MatrixBlocked_L1Block_64B.json  MatrixNaive_L1Block_128B.json  MatrixNaive_L1Block_16B.json  MatrixNaive_L1Block_32B.json  MatrixNaive_L1Block_64B.json  RandomAccess_L1Block_128B.json  RandomAccess_L1Block_16B.json  RandomAccess_L1Block_32B.json  RandomAccess_L1Block_64B.json  RowMajorMatrix_L1Block_128B.json  RowMajorMatrix_L1Block_16B.json  RowMajorMatrix_L1Block_32B.json  RowMajorMatrix_L1Block_64B.json  SequentialAccess_L1Block_128B.json  SequentialAccess_L1Block_16B.json  SequentialAccess_L1Block_32B.json  SequentialAccess_L1Block_64B.json  (+8 more)
configs/03_L1_Associativity_Variations/: BinaryTree_L1Assoc_16way.json  BinaryTree_L1Assoc_2way.json  BinaryTree_L1Assoc_4way.json  BinaryTree_L1Assoc_8way.json  BinaryTree_L1Assoc_DirectMapped.json  BinaryTree_L1Assoc_FullyAssoc.json  BlockedDataAccess_L1Assoc_16way.json  BlockedDataAccess_L1Assoc_2way.json  BlockedDataAccess_L1Assoc_4way.json  BlockedDataAccess_L1Assoc_8way.json  BlockedDataAccess_L1Assoc_DirectMapped.json  BlockedDataAccess_L1Assoc_FullyAssoc.json  ColumnMajorMatrix_L1Assoc_16way.json  ColumnMajorMatrix_L1Assoc_2way.json  ColumnMajorMatrix_L1Assoc_4way.json  ColumnMajorMatrix_L1Assoc_8way.json  ColumnMajorMatrix_L1Assoc_DirectMapped.json  ColumnMajorMatrix_L1Assoc_FullyAssoc.json  ConflictHeavy_L1Assoc_16way.json  ConflictHeavy_L1Assoc_2way.json  ConflictHeavy_L1Assoc_4way.json  ConflictHeavy_L1Assoc_8way.json  ConflictHeavy_L1Assoc_DirectMapped.json  ConflictHeavy_L1Assoc_FullyAssoc.json  LinkedListTraversal_L1Assoc_16way.json  LinkedListTraversal_L1Assoc_2way.json  LinkedListTraversal_L1Assoc_4way.json  LinkedListTraversal_L1Assoc_8way.json  LinkedListTraversal_L1Assoc_DirectMapped.json  LinkedListTraversal_L1Assoc_FullyAssoc.json  MatrixBlocked_L1Assoc_16way.json  MatrixBlocked_L1Assoc_2way.json  MatrixBlocked_L1Assoc_4way.json  MatrixBlocked_L1Assoc_8way.json  MatrixBlocked_L1Assoc_DirectMapped.json  MatrixBlocked_L1Assoc_FullyAssoc.json  MatrixNaive_L1Assoc_16way.json  MatrixNaive_L1Assoc_2way.json  MatrixNaive_L1Assoc_4way.json  MatrixNaive_L1Assoc_8way.json  (+32 more)
configs/04_L1_Policy_Variations/: BinaryTree_L1Policy_FIFO.json  (+35 more)
examples/: direct_mapped.json  fully_associative.json  multilevel_exclusive.json  multilevel_inclusive.json
include/: address.hpp  cache.hpp  cache_policy.hpp  json_config.hpp  memory.hpp  metrics.hpp
scripts/: generate_configs.py  run_pin_trace.sh
src/: address.cpp  cache.cpp  cache_policy.cpp  main.cpp  memory.cpp  metrics.cpp
tests/: address_test.cpp  cache_policy_test.cpp  cache_test.cpp  memory_test.cpp  test_cache_inclusion.cpp  test_json_config.cpp  visualize_cache.cpp
tests/old/: cache_test.cpp
traces/: blocked_access.out  column_major.out  conflict_heavy.out  linked_list.out  matrix_blocked.out  matrix_naive.out  row_major.out  sequential_access.out  strided_access.out  write_heavy.out
(+1 files in other folders)
